Fix padding when no scrollbar is in container

--- a/static/style5/_scrollbar.scss
+++ b/static/style5/_scrollbar.scss
@@ -6,6 +6,7 @@ div.scrollblock {
 	overflow: auto;
 	overflow-x: hidden;
 	overflow-y: auto;
+	box-sizing: border-box;
 
 	div.sizeable & {
 		position: relative;
